--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "bookapp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "@types/lodash": "^4.14.118",
-    "@types/react": "^16.7.11",
-    "@types/react-dom": "^16.0.11",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "rxjs": "^6.3.3",
-    "ts-loader": "^5.3.1",
-    "typescript": "^3.2.1",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
-  },
-  "devDependencies": {},
+  "name": "gatsby-starter-hello-world",
+  "description": "Gatsby hello world starter",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p",
-    "start": "webpack-dev-server -d --content-base ./public"
+    "develop": "gatsby develop",
+    "start": "npm run develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@types/styled-components": "^4.1.2",
+    "babel-plugin-styled-components": "^1.9.2",
+    "gatsby": "^2.0.33",
+    "gatsby-cli": "^2.4.6",
+    "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-plugin-typescript": "^2.0.3",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "styled-components": "^4.1.2",
+    "typescript": "^3.2.2"
+  }
 }
