--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-styled-components": "^1.9.2",
     "gatsby": "^2.0.33",
     "gatsby-cli": "^2.4.6",
+    "gatsby-plugin-prefetch-google-fonts": "^1.1.1",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-plugin-typescript": "^2.0.3",
     "react": "^16.5.1",
